--- a/content/blog/pars-orationis-secura/index.adoc
+++ b/content/blog/pars-orationis-secura/index.adoc
@@ -5,8 +5,8 @@
 :tags: detect, injection, scanner
 :image: cover.png
 :alt: Person holding sticky note
-:description: How to use Python and pyparsing to parse application code in order to find SQL injections in bWAPP. A SQL injection is defined as a SQL query with concatenations to PHP variables or function calls. The parser detects most of the SQL injections despite its limitations, and no false positives.
-:keywords: Attack, Detection, Parser, Python, Injection, BWAPP
+:description: Learn here how to use Python and pyparsing to parse application code in order to find SQL injections in bWAPP.
+:keywords: Attack, Detection, Parser, Python, Injection, SQL, BWAPP, Ethical Hacking, Pentesting
 :author: Rafael Ballestas
 :writer: raballestasr
 :name: Rafael Ballestas
@@ -14,7 +14,7 @@
 :about2: with an itch for CS
 :source: https://unsplash.com/photos/D9Zow2REm8U
 
-= Pars orationis non est secura
+= Pars Orationis Non Est Secura
 
 We like
 link:http://itsecgames.com/[`bWAPP`]
