--- a/content/blog/risk-indicator-roundup/index.adoc
+++ b/content/blog/risk-indicator-roundup/index.adoc
@@ -5,8 +5,8 @@
 :tags: business, ethical hacking, risk
 :image: cover.png
 :alt: Choices. Photo by Nathan Dumlao on Unsplash: https://unsplash.com/photos/pMW4jzELQCw
-:description: This blog compares risk indicators used in quantitative finance. Most of them have been discussed earlier in previous blogs, such as VaR, tVaR and LEC. We introduce the ALE, and compare them all giving their respective pros and cons. In the end, it is a matter of choice or we can just use them all.
-:keywords: Risk, Probability, Choice, Measure, Quantify, Indicator
+:description: Here we compare risk indicators used in quantitative finance, giving their pros and cons. Most of them we have discussed earlier, but here we introduce the ALE.
+:keywords: Risk, Probability, Choice, Measure, Quantify, Indicator, Ethical Hacking, Pentesting
 :author: Rafael Ballestas
 :writer: raballestasr
 :name: Rafael Ballestas
