--- a/content/blog/security-trends/index.adoc
+++ b/content/blog/security-trends/index.adoc
@@ -5,8 +5,8 @@
 :tags: cybersecurity, business, trends
 :image: cover.png
 :alt: Screen showing performance stats. Photo by Stephen Dawson on Unsplash: https://unsplash.com/photos/qwtCeJ5cLYs
-:description: In this article, we will talk about the main cybersecurity trends for 2019, what to expect in upcoming years, how to keep your company secured against new types of cyber-attacks, and how Fluid Attacks, as a company, deals with these kinds of threats.
-:keywords: Cybersecurity, Trends, Fluid Attacks, Perspective, Techniques, Attacks
+:description: In this article, we discuss the main cybersecurity trends for 2019, how to keep your company secured, and how Fluid Attacks deals with these kinds of threats.
+:keywords: Cybersecurity, Trends, Fluid Attacks, Perspective, Techniques, Attacks, Ethical Hacking, Pentesting
 :author: Oscar Prado
 :writer: oprado
 :name: Oscar Prado
@@ -14,7 +14,7 @@
 :about2: Fluid Attacks Developer, Hacker Wannabe
 :source: https://unsplash.com/photos/qwtCeJ5cLYs
 
-= Security in trends
+= Security in Trends
 
 In today's world technology evolves rapidly.
 New tools, approaches, and trends seem to come out on almost a daily basis.
