--- a/content/blog/smbs-bankruptcy/index.adoc
+++ b/content/blog/smbs-bankruptcy/index.adoc
@@ -5,8 +5,8 @@
 :tags: business, security, company, vulnerability
 :image: cover.png
 :alt: Photo by NeONBRAND on unplash: https://unsplash.com/photos/dDvrIJbSCkg
-:description: Do companies go bankrupt by a cybersecurity breach? Some people assure there is no evidence about it. We tried to dig deeper. It appears this is the case for big corporations, but not for smaller firms. SMBs bear a considerable risk with reactive, one-shot cybersecurity practices.
-:keywords: Bussiness, Security, Company, Vulnerability, Mistake, Information
+:description: Do companies go bankrupt by a cybersecurity breach? Some people assure there is no evidence about it. In this blog post, we tried to dig deeper.
+:keywords: Bussiness, Security, Company, Vulnerability, Mistake, Information, Ethical Hacking, Pentesting
 :author: Julian Arango
 :writer: jarango
 :name: Julian Arango
