--- a/content/blog/pass-cracking/index.adoc
+++ b/content/blog/pass-cracking/index.adoc
@@ -5,13 +5,12 @@
 :tags: password, security, vulnerability, hacking, mistake
 :image: cover.png
 :alt: Photo by Arteum.ro on Unsplash
-:description: I had never associated concepts such as brute force or dictionary with passwords. After reviewing some information to write this blog post, I decided to change some of my most important passwords, and after reading this post, I think you might want to review and modify your passwords too.
-:keywords: Password, Security, Vulnerability, Hacking, Mistake, Information
+:description: After I wrote this post, I decided to change some of my most important passwords, and after you read it, we think you might want to modify your passwords too.
+:keywords: Password, Cracking, Security, Vulnerability, Hacking, Dictionary, Brute Force, Ethical Hacking, Pentesting
 :author: Felipe Ruiz
 :writer: fruiz
 :name: Felipe Ruiz
 :about1: Technical writer
-:about2: Behavioral scientist.
 :source: https://unsplash.com/photos/7H41oiADqqg
 
 = Caution! Your Password Can Be Mine
