--- a/content/blog/quantifying-risk/index.adoc
+++ b/content/blog/quantifying-risk/index.adoc
@@ -5,8 +5,8 @@
 :tags: business, ethical hacking, risk
 :image: cover.png
 :alt: Risky poker move. Credits: https://unsplash.com/photos/vBpd607jLXs
-:description: A survey of probabilistic methods that can be applied to quantify cybersecurity risk in terms of probabilities, confidence intervals, dollars, and cents. We discuss why we (wrongly) believe these methods do not apply, and the kind of results that can be achieved by using them.
-:keywords: Risk, Probability, Impact, Measure, Quantify, Security
+:description: Here we discuss a survey of probabilistic methods that can be applied to quantify cybersecurity risk in terms of probabilities, confidence intervals, and money.
+:keywords: Risk, Probability, Impact, Measure, Quantify, Security, Ethical Hacking, Pentesting
 :author: Rafael Ballestas
 :writer: raballestasr
 :name: Rafael Ballestas
@@ -14,7 +14,7 @@
 :about2: with an itch for CS
 :source: https://unsplash.com/photos/vBpd607jLXs
 
-= Quantifying risk
+= Quantifying Risk
 
 One of the least understood parts of a vulnerability
 is the _risk_ it poses to the target.
