--- a/content/blog/reversing-mortals/index.adoc
+++ b/content/blog/reversing-mortals/index.adoc
@@ -5,8 +5,8 @@
 :tags: revert, challenge, engineering
 :image: cover.png
 :alt: Wrong red piece in white puzzle
-:description: The world of hacking is pretty extense and it's difficult to know where to start. In this article we provide a first approach of one of the most common hacking applications: reverse engineering by solving a simple but educational cracking challenge using OllyDBG.
-:keywords: Reversing, Reverse Engineering, Debugger, OllyDBG, Hacking, Assembler.
+:description: In this article, we provide a first approach to reverse engineering by solving a simple but educational cracking challenge using OllyDBG.
+:keywords: Reversing, Reverse Engineering, Debugger, OllyDBG, Hacking, Assembler, Ethical Hacking, Pentesting
 :author: Juan Aguirre
 :writer: juanes
 :name: Juan Esteban Aguirre González
