--- a/content/blog/searching-history/index.adoc
+++ b/content/blog/searching-history/index.adoc
@@ -5,8 +5,8 @@
 :tags: security, git, vulnerability, credential
 :image: cover.png
 :alt: Click pen and magnifying glass on book page. Photo by Joao Silas on Unsplash: https://unsplash.com/photos/I_LgQ8JZFGE
-:description: If you are a developer or a code reviewer, then it is probable that you use git as your source control management tool. As everyone knows, production credentials should be protected; this post will explain how to extract old credentials and how to protect those.
-:keywords: Git, Security, Vulnerability, Hacking, Repository, Credentials.
+:description: As everyone knows in our context, production credentials should be protected. In this post, we explain how to extract old credentials and how to protect them.
+:keywords: Git, Security, Vulnerability, Hacking, Repository, Credentials, Ethical Hacking, Pentesting
 :author: Jonathan Armas
 :writer: johna
 :name: Jonathan Armas
